# Chatbot

./: Cargo.toml  DOCUMENTATION_INDEX.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MULTIDAY_EVENT_FIX.md  PROJECT_REPORT.md  QUERY_RESOLUTION_2026_RECESS.md  QUICK_START.md  REQUIREMENTS_FULFILLED.md  REQUIREMENTS_SPECIFICATION.md  REQUIREMENTS_VALIDATION.md  SYSTEM_VERIFICATION.md  build_errors.txt  build_output.txt  extract_docx.py  extracted_data.txt  load_output.txt  test_extract.txt
artifacts/: best_model_epoch_1.safetensors.metadata.json  best_model_epoch_10.safetensors.metadata.json  best_model_epoch_2.safetensors.metadata.json  best_model_epoch_3.safetensors.metadata.json  best_model_epoch_4.safetensors.metadata.json  best_model_epoch_5.safetensors.metadata.json  best_model_epoch_6.safetensors.metadata.json  best_model_epoch_7.safetensors.metadata.json  best_model_epoch_8.safetensors.metadata.json  best_model_epoch_9.safetensors.metadata.json
burn-patch/: Cargo.toml
burn-patch/src/: lib.rs
data/: extraction_results.txt  full_output.txt  recess_query.txt
data/calendar_2026.docx_extracted/: [Content_Types].xml
data/calendar_2026.docx_extracted/customXml/: itemProps1.xml
data/calendar_2026.docx_extracted/docProps/: app.xml  core.xml
data/calendar_2026.docx_extracted/word/: document.xml  endnotes.xml  fontTable.xml  footer1.xml  (+9 more)
src/: inference.rs  lib.rs  main.rs  train.rs
src/data/: batcher.rs  dataset.rs  loader.rs  mod.rs  tokenizer.rs
src/model/: mod.rs  qa_model.rs  transformer.rs
tests/: integration_test.rs
(+1 files in other folders)
