[package]
name    = "word-doc-qa"
version = "0.1.0"
edition = "2021"
default-run = "word-doc-qa"

[lib]
name = "word_doc_qa"
path = "src/lib.rs"

[[bin]]
name = "word-doc-qa"
path = "src/main.rs"

[dependencies]
burn       = { path = "burn-patch", version = "0.20.1", features = ["train", "wgpu", "ndarray", "autodiff"] }
docx-rs    = "0.4"
tokenizers = "0.15"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip        = "0.6"
regex      = "1"

[dev-dependencies]
burn = { path = "burn-patch", version = "0.20.1", features = ["test"] }


